--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@clerk/nextjs": "^6.23.0",
     "@clerk/themes": "^2.2.51",
+    "@ionic/react": "^8.6.2",
+    "@ionic/react-router": "^8.6.2",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "git-commit-msg-linter": "^5.0.8",
     "husky": "^9.1.7",
+    "ionicons": "^8.0.9",
     "lint-staged": "^12.3.2",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
