--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@stripe/stripe-js": "^7.4.0",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
